# dde_solve

./: README.md  pyproject.toml
DDE_solver/: DDE_solver.py  NDDE_fucked.py  RKLagrange.py  animated_SIR_delay_0.py  animated_SIR_delay_1.py  animated_SIR_delay_4.py  compare.py  dde_one_delay.py  dde_test.sh  disc_finder.py  eq_1_1_5.py  eq_1_4_10.py  eq_1_4_12.py  ndde_test.sh  rkh.py  rkh_LATEST.py  rkh_NDDE.py  rkh_all_fucked.py  rkh_fast_overlapping.py  rkh_ovl_simp_newton.py  rkh_refactor.py  rkh_simple.py  rkh_state.py  rkh_step_rejection.py  rkh_tests.py  save.py  save_a_copy_of_working_version.py  save_copy.py  save_copy_1.py  simplified_Newton.py  solve_dde.py  somehow_fucked.py  test_4_bifurcation01_sir_delay_dde.py  test_5_bifurcation01_sir_delay_dde.py  test_dde_sin.py  utils.py
DDE_solver/DDETST/: DDETST_A1.py  DDETST_A2.py  DDETST_All_Problems_statistics.py  DDETST_B1.py  DDETST_B2.py  DDETST_C1.py  DDETST_C2.py  DDETST_C3.py  DDETST_C4.py  DDETST_D1.py  DDETST_D2.py  DDETST_E1.py  DDETST_E2.py  DDETST_F1.py  DDETST_F2.py  DDETST_F3.py  DDETST_F4.py  DDETST_F5.py  DDETST_G1.py  DDETST_G2.py  DDETST_H1.py  DDETST_H3.py  DDETST_H4.py  ddetst_run.sh
DDE_solver/examples/: ex_1_1_14.py  ex_1_1_1_zennaro.py  ex_1_1_2_zennaro.py  ex_1_1_9.py  ex_1_2_6.py  ex_1_2_7.py  ex_1_3_1.py  ex_1_3_12.py  ex_1_3_2.py  ex_1_3_3_recursive_non_sense.py  ex_1_3_4.py  ex_1_3_4_ov.py  ex_1_3_9.py  ex_1_4_1.py  matlab.m  new_one.py  simple_state.py  sin.py  trying_to_break.py
DDE_solver/not_sure/: animated_SIR_delay_2.py  animated_SIR_delay_3.py  eq_1_1_2.py  eq_1_4_10.py  general_delay_rkh.py  rkh.py  rkh_not_optimized_for_delay.py  space_eq_1_2_6.py  step_rejection_rkh.py  test_1_bifurcation01_sir_delay_dde.py  (+4 more)
dde_solve/: __init__.py  cerk_step.py  integrator.py  methods.py
dde_solve.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
time_delay_non_vanishing/: mid_point_cont.py
(+100 files in other folders)
