[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dde-solve"  # this is the PyPI package name
version = "0.1.0"
description = "Numerical solver for delay differential equations (DDEs) and neutral delay differential equations (NDDEs)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name="Kaique Oliveira", email="your_email@example.com" }
]
keywords = ["dde", "delay differential equations", "numerical methods"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/kaique-m-oliveira/DDE_solve"
Repository = "https://github.com/kaique-m-oliveira/DDE_solve"
