[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dde-solve"  
version = "0.1.3"
description = "Numerical solver for delay differential equations (DDEs) and neutral delay differential equations (NDDEs)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name="Kaique M. Oliveira", email="kaique_oliveira@usp.br" }
]
keywords = ["dde", "delay differential equations", "numerical solver", "dde_solver"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/kaique-m-oliveira/dde_solve"
Repository = "https://github.com/kaique-m-oliveira/dde_solve"
Tests = "https://github.com/kaique-m-oliveira/ddetst"  

[tool.setuptools.packages.find]
where = ["."]  


